add article content

--- a/momobackend/public/test.html
+++ b/momobackend/public/test.html
@@ -40,10 +40,21 @@
             <h1 class="title display-3"><span class="badge badge-secondary">茉茉部落格</span></h1>
             <div class="inner">
               <div class="article">
-                <div class = "article_title">
+                <div class="article_title">
                   <h1>hihihihihihhi</h1>
+
+                  <div class="row">
+                    <div class="article_authorandtime col-3">
+                      <p>作者: 春花</p> 
+                    </div>
+                    <div class="article_authorandtime col-7">
+                      <p>2019年10月20日 </p>
+                    </div>
+                  </div>
+
                 </div>
-                <div class = "article_content">
+
+                <div class="article_content">
                   <p>contentcontentco contentcontentcocontentcontentcocontentcontentcocont entcontentc
                     contentcon tentcocontentcontentcoconte ntcontentcocont
                     entcontentcocontentcontentcocontentcontentcontentconte
