--- a/momobackend/public/register.html
+++ b/momobackend/public/register.html
@@ -41,9 +41,59 @@
             <div class="inner">
               <div class="article">
                 <div class="article_title">
-                  <h1>帳號</h1>
-
-
+                  
+                  <div>
+                    <form onSubmit={this.handleSubmit} >
+                      <div class="row validate">
+                        <p>帳號 </p>
+                        <input type="text" 
+                            name="username" 
+                            placeholder="Username" 
+                            value={this.state.username} 
+                            onChange={this.handleChange}  
+                            class="form-control" 
+                            required
+                         />
+                      </div>
+                      <div class="row validate">
+                        <p>電子郵件</p>
+                        <input type="email" 
+                            name="email" 
+                            placeholder="Email" 
+                            value={this.state.email} 
+                            onChange={this.handleChange} 
+                            class="form-control" 
+                            required
+                        />
+                      </div>
+                      <div class="row validate">
+                        <p>密碼</p>
+                        <input type="password" 
+                            name="password" 
+                            placeholder="Password" 
+                            value={this.state.password} 
+                            onChange={this.handleChange} 
+                            class="form-control" 
+                            required 
+                        />
+                      </div>
+                      <div class="row validate">
+                        <p>確認密碼</p>
+                        <input type="password" 
+                            name="password_confirmation" 
+                            placeholder="Password confirmation" 
+                            value={this.state.password_confirmation} 
+                            onChange={this.handleChange} 
+                            class="form-control" 
+                            required 
+                        />
+                      </div>
+                      <div class="row validate">
+                        <button type="submit" class="btn btn-light">註冊</button>
+                      </div>
+                      
+                    </form>
+                </div>
 
                 </div>
               </div>
