--- a/momobackend/public/register.html
+++ b/momobackend/public/register.html
@@ -42,7 +42,6 @@
               <div class="article">
                 <div class="article_title">
                   
-                  <div>
                     <form onSubmit={this.handleSubmit} >
                       <div class="row validate">
                         <p>帳號 </p>
@@ -52,6 +51,8 @@
                             value={this.state.username} 
                             onChange={this.handleChange}  
                             class="form-control" 
+                            autoComplete="username" 
+                            maxlength="16" 
                             required
                          />
                       </div>
@@ -63,6 +64,8 @@
                             value={this.state.email} 
                             onChange={this.handleChange} 
                             class="form-control" 
+                            autoComplete="email" 
+                            maxlength="200" 
                             required
                         />
                       </div>
@@ -74,6 +77,8 @@
                             value={this.state.password} 
                             onChange={this.handleChange} 
                             class="form-control" 
+                            autoComplete="new-password" 
+                            maxlength="16" 
                             required 
                         />
                       </div>
@@ -85,15 +90,15 @@
                             value={this.state.password_confirmation} 
                             onChange={this.handleChange} 
                             class="form-control" 
+                            autoComplete="new-password" 
+                            maxlength="16" 
                             required 
                         />
                       </div>
                       <div class="row validate">
                         <button type="submit" class="btn btn-light">註冊</button>
                       </div>
-                      
                     </form>
-                </div>
 
                 </div>
               </div>
