調整 新增文章按鈕

--- a/momobackend/public/index.html
+++ b/momobackend/public/index.html
@@ -40,7 +40,7 @@
           <div id="main" class="col-9">
             <h1 class="title display-3"><span class="badge badge-secondary">茉茉部落格</span></h1>
             <div class="inner">
-              <div><i class="far fa-plus-square fa-3x"></i></div>
+              <div class="new_button"><button class="btn btn-outline-secondary">新增文章</button></div>
               <div class="article">
                 <div class="article_title">
                   <h1>hihihihihihhi</h1>
