調整 版面 add README

--- a/momobackend/public/index.html
+++ b/momobackend/public/index.html
@@ -37,7 +37,7 @@
     <div id="root">
       <div class="container-fluid">
         <div class="row">
-          <div id="main" class="col-9">
+          <div id="main" class="col-md-9 col-lg-9">
             <h1 class="title display-3"><span class="badge badge-secondary">茉茉部落格</span></h1>
             <div class="inner">
               <div class="new_button"><button class="btn btn-outline-secondary">新增文章</button></div>
@@ -70,7 +70,7 @@
 
             </div>
           </div>
-          <div id="sidebar" class="col-3">
+          <div id="sidebar" class="col-md-9 col-lg-9">
             <div class="inner">
               <nav id="menu">
                 <li class="list-group-item"><a class="sidebar_title list-group-item-action" href="https://www.google.com">註冊</a></li>
